--- a/main.css
+++ b/main.css
@@ -1,14 +1,54 @@
-h1{
-	font-family:cursive, sans-serif;
-	color:blue;
-	border:double#6495ED;
-	background-color:#87CEEB;
-
+h2 {
+	color: #a7e8f8; 
+	font-family: 'Julius Sans One', sans-serif; 
+	font-size: 24px; 
+	font-weight: bold; 
+	line-height: 32px; 
+	margin: 0 0 24px; 
+	text-shadow: 1px 1px 1px #082b34;
 }
 
-p{
-	background-color:#800080;
-	border:dotted#FFFF00;
-	font-family:"Apple Chancery", cursive;
-	color:#AFEEEE;
+h1 { 
+	color: #d54d7b; 
+	font-family: "Great Vibes", cursive; 
+	font-size: 50px; 
+	line-height: 60px;
+	font-weight: normal; 
+	margin-bottom: 0px;
+	margin-top: 20px; 
+	text-align: center; 
+	text-shadow: 0 1px 1px #fff; }
+
+html{
+	background-color:#ADD8E6;
+	border: dashed#000080;
 }
+
+h2{
+	font-family:Futura, Impact, Helvetica, Arial, sans-serif;
+	color:#800080;
+	border: dashed#4B0082;
+	background-color:#9370DB;
+}
+
+footer{
+	font-family:‘Goudy Old Style’, garamond, ‘book antiqua’, ‘Times New Roman’, Times, serif sequence;
+	color:	#FAEBD7;
+	border: dashed#D2691E;
+	background-color: #006400;
+}
+	
+ p {
+        color: #424242;
+        font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
+	letter-spacing:0.1em;
+	margin: 40px auto;
+	text-transform: lowercase;
+	line-height: 145%;
+	font-size: 14pt;
+	font-variant: small-caps;
+        }
+
+	
+	
+
