--- a/css/quiz2.css
+++ b/css/quiz2.css
@@ -1,16 +1,29 @@
 
 h1 {
 	background-color: red;
-	border: solid yellow;
+	border: solid red;
 	width: 500px;
 }
 
-body~p{
+header p{
 	color: white;
-	background-color: red;
 }
 
-h2~ul{
+h2+ul{
 	border: solid black;
 	margin-left: 100px;
 }
+
+main{
+	background-color: grey;
+}
+
+main > p{
+	background-color: white;
+}
+
+main > p2{
+	background-color:black;
+	color:white;
+}
+
