--- a/final/final.css
+++ b/final/final.css
@@ -1,7 +1,6 @@
-<style>
-.image {
-   width: 500px;
-   height:300px;
+img {
+   width: 200px;
+   height:100px;
 }
 
 h1 {
@@ -13,4 +12,4 @@ h1 {
    width: 300px;
    height: 50px;
 }
-</style>
+
