--- a/final/final.css
+++ b/final/final.css
@@ -1,12 +1,11 @@
-.wrapper {
+header {
   width: 100%;
-  /* whatever width you want */
   display: inline-block;
   position: relative;
-  background-size: contain !important;
-  background: url('http://cdn.playbuzz.com/cdn/6eb513d0-aa4b-47bf-829a-4cda6e203ff1/5419d0e7-a380-4737-8c50-b07fb102131e_560_420.jpg')center no-repeat;
+  background-size: contain ;
+  background: center no-repeat;
 }
-.wrapper:after {
+.header:after {
   padding-top: 75%;
   display: block;
   content: '';
@@ -22,3 +21,13 @@
  margin-top: 30%;
 
 }
+
+nav {
+  margin-left: 250px;
+}
+
+main {
+  margin-left: 251px;
+}
+
+table
