--- a/final/final.css
+++ b/final/final.css
@@ -89,3 +89,7 @@ background-image: url(http://www.technocrazed.com/wp-content/uploads/2015/11/HD-
 footer {
   color: white;
 }
+
+"wizard" {
+float: right;
+}
